search corrected (with scroll if word is out of view) help page improved bug in undo/redo corrected: spacesAfter was not copied

--- a/gui/index.css
+++ b/gui/index.css
@@ -57,6 +57,10 @@ h2 {
     margin-left: 5px;
 }
 
+#arbre {
+    /*white-space: nowrap; */
+    overflow-x: auto;
+}
 
 #header {
     position:fixed;
